# discord-voice-talk-chatterbox

./: .env.example  .gitignore  .raggy_deps_cache.json  CLAUDE.md  LICENSE  README.md  docker-compose.yml  index.js  package-lock.json  pyproject.toml  raggy_config_example.yaml
characters/adrian/: adrian.json
characters/doanything/: doanything.pt  doanything.txt
characters/emma/: biography.txt  emma.json  prompts.json
characters/maya/: biography.txt  maya.json
characters/oddly/: prompts.json
characters/wizard/: prompts.json  wizard.json
config/: characters.json
docs/: DEVELOPMENT_STATE.md  chatter-box.txt  command.md  discord-js.txt  qualitycheck.md
docs/chatterbox-project-example/: README.md  build-and-push.sh  characters.py  convert_wav_to_pt.py  main.py  requirements.txt
docs/chatterbox-project-example/static/: index.html
docs/discord-transcribe-bot/: Dockerfile  README.md  deploy-commands.js  docker-compose.yml  index.js  output.json  package.json  tsconfig.json
docs/discord-transcribe-bot/commands/: apikey.js  deletecampaign.js  export.js  mongodb.js  namecampaign.js  session.js
docs/discord-transcribe-bot/models/: Campaign.js  ServerConfig.js  SessionState.js  Summary.js
sample-voice-project-js/: .env.example  Dockerfile  README.md  deploy-commands.js  docker-compose.yml  index.js  package.json
sample-voice-project-js/config/: characters.json
src/commands/: audiofilter.js  character.js  join.js  leave.js  transcription.js
src/utils/: chatgpt.js  config.js  imageGeneration.js  transcription.js  tts.js  voiceConnection.js
(+81 files in other folders)
